blane-additional-services-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: blane-additional-services
  name: blane-additional-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blane-additional-services
  template:
    metadata:
      labels:
        app: blane-additional-services
    spec:
      containers:
      - env:
        - name: RDS_DB_NAME
          valueFrom:
            configMapKeyRef:
              key: RDS_DB_NAME
              name: blane-config
        - name: RDS_HOSTNAME
          valueFrom:
            secretKeyRef:
              key: RDS_HOSTNAME
              name: blane-secrets
        - name: RDS_PASSWORD
          valueFrom:
            secretKeyRef:
              key: RDS_PASSWORD
              name: blane-secrets
        - name: RDS_PORT
          valueFrom:
            configMapKeyRef:
              key: RDS_PORT
              name: blane-config
        - name: RDS_USERNAME
          valueFrom:
            configMapKeyRef:
              key: RDS_USERNAME
              name: blane-config
        image: kamalessafi/blane-additional-services-kubernetes:0.0.27-SNAPSHOT
        name: blane-additional-services
        ports:
        - name: liveness-port
          containerPort: 8200
        resources: #CHANGE
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1024Mi #256Mi
        readinessProbe:
          httpGet:
            path: /blane-additional-services/actuator/health/readiness
            port: liveness-port
          failureThreshold: 10
          periodSeconds: 5
          initialDelaySeconds: 80
        livenessProbe:
          httpGet:
            path: /blane-additional-services/actuator/health/liveness
            port: liveness-port
          failureThreshold: 3
          periodSeconds: 60
          initialDelaySeconds: 80
      restartPolicy: Always
