blane-additional-services-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blane-additional-services
  name: blane-additional-services
spec:
  type: NodePort
  ports:
  - name: "8200"
    port: 8200
    targetPort: 8200
  selector:
    app: blane-additional-services
  sessionAffinity: None #CHANGE
