blane-apple-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blane-apple
  name: blane-apple
spec:
  type: NodePort
  ports:
  - name: "8000"
    port: 8000
    targetPort: 8000
  selector:
    app: blane-apple
  sessionAffinity: None #CHANGE
