blane-scheduler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: blane-scheduler
  name: blane-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blane-scheduler
  template:
    metadata:
      labels:
        app: blane-scheduler
    spec:
      containers:
      - env:
        - name: RDS_DB_NAME
          valueFrom:
            configMapKeyRef:
              key: RDS_DB_NAME
              name: blane-config
        - name: RDS_HOSTNAME
          valueFrom:
            secretKeyRef:
              key: RDS_HOSTNAME
              name: blane-secrets
        - name: RDS_PASSWORD
          valueFrom:
            secretKeyRef:
              key: RDS_PASSWORD
              name: blane-secrets
        - name: RDS_PORT
          valueFrom:
            configMapKeyRef:
              key: RDS_PORT
              name: blane-config
        - name: RDS_USERNAME
          valueFrom:
            configMapKeyRef:
              key: RDS_USERNAME
              name: blane-config
        image: kamalessafi/blane-scheduler-kubernetes:0.0.27-SNAPSHOT
        name: blane-scheduler
        resources: #CHANGE
          requests:
            cpu: 200m
            memory: 512Mi       
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blane-scheduler
  name: blane-scheduler
spec:
  type: NodePort
  selector:
    app: blane-scheduler
