blane-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blane
  name: blane
spec:
  type: NodePort
  ports:
  - name: "8000"
    port: 8000
    targetPort: 8000
  selector:
    app: blane
  sessionAffinity: None #CHANGE
