mysqldb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysqldb
  name: mysqldb
spec:
  type: ClusterIP
  ports:
  - name: "3306"
    port: 3306
    targetPort: 3306
  selector:
    app: mysqldb
