blane-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blane-gateway-ingress
spec:
  rules:
  - http:
      paths:
      - path: /blane/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: blane
            port:
              number: 8000
      - path: /blane-additional-services/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: blane-additional-services
            port:
              number: 8200
      - path: /blane-apple/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: blane-apple
            port:
              number: 8000
      - path: /blane-apple-additional-services/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: blane-apple-additional-services
            port:
              number: 8200
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: blane-gateway-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
#spec:
#  rules:
#  - http:
#      paths:
#      - path: /blane/*
#        backend:
#          serviceName: blane
#          servicePort: 8000          
#      - path: /blane-additional-services/*
#        backend:
#          serviceName: blane-additional-services
#          servicePort: 8200
#      - path: /blane-apple/*
#        backend:
#          serviceName: blane-apple
#          servicePort: 8000 
#      - path: /blane-apple-additional-services/*
#        backend:
#          serviceName: blane-apple-additional-services
#          servicePort: 8200
